server/roles/ufw/files/user.rules
### RULES ###

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 2121 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2121 -j ACCEPT
-A ufw-user-input -p udp --dport 2121 -j ACCEPT

### tuple ### allow any 2022 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2022 -j ACCEPT
-A ufw-user-input -p udp --dport 2022 -j ACCEPT

### tuple ### allow tcp 2244 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 2244 -j ACCEPT

### tuple ### allow tcp 5050 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5050 -j ACCEPT

### tuple ### allow any 4713 0.0.0.0/0 any 134.60.25.192/26 in
-A ufw-user-input -p tcp --dport 4713 -s 134.60.25.192/26 -j ACCEPT
-A ufw-user-input -p udp --dport 4713 -s 134.60.25.192/26 -j ACCEPT

### tuple ### allow any 2049 0.0.0.0/0 any 134.60.25.192/26 in
-A ufw-user-input -p tcp --dport 2049 -s 134.60.25.192/26 -j ACCEPT
-A ufw-user-input -p udp --dport 2049 -s 134.60.25.192/26 -j ACCEPT

### tuple ### allow any 2049 0.0.0.0/0 any 100.64.0.0/10 in
-A ufw-user-input -p tcp --dport 2049 -s 100.64.0.0/10 -j ACCEPT
-A ufw-user-input -p udp --dport 2049 -s 100.64.0.0/10 -j ACCEPT

### tuple ### allow any 3478 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3478 -j ACCEPT
-A ufw-user-input -p udp --dport 3478 -j ACCEPT

### tuple ### allow any 5349 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5349 -j ACCEPT
-A ufw-user-input -p udp --dport 5349 -j ACCEPT

### tuple ### allow udp 49152:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 49152:65535 -j ACCEPT

### tuple ### allow any 9102 0.0.0.0/0 any 134.60.112.128/27 in
-A ufw-user-input -p tcp --dport 9102 -s 134.60.112.128/27 -j ACCEPT
-A ufw-user-input -p udp --dport 9102 -s 134.60.112.128/27 -j ACCEPT

### tuple ### allow udp 4444 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 4444 -j ACCEPT

### END RULES ###
