server/roles/ufw/files/user6.rules
### RULES ###

### tuple ### allow any 80 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 80 -j ACCEPT
-A ufw6-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 443 -j ACCEPT
-A ufw6-user-input -p udp --dport 443 -j ACCEPT

### tuple ### allow any 2121 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 2121 -j ACCEPT
-A ufw6-user-input -p udp --dport 2121 -j ACCEPT

### tuple ### allow any 2022 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 2022 -j ACCEPT
-A ufw6-user-input -p udp --dport 2022 -j ACCEPT

### tuple ### allow any 2244 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 2244 -j ACCEPT

### tuple ### allow any 5050 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 5050 -j ACCEPT

### tuple ### allow any 3478 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 3478 -j ACCEPT
-A ufw6-user-input -p udp --dport 3478 -j ACCEPT

### tuple ### allow any 5349 ::/0 any ::/0 in
-A ufw6-user-input -p tcp --dport 5349 -j ACCEPT
-A ufw6-user-input -p udp --dport 5349 -j ACCEPT

### tuple ### allow udp 49152:65535 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 49152:65535 -j ACCEPT

### tuple ### allow udp 4444 ::/0 any ::/0 in
-A ufw6-user-input -p udp --dport 4444 -j ACCEPT

### END RULES ###
